<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context="pl.ziwg.pwrinfo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/title_menu"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_message"
        android:text="@string/title_activity_message"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_event"
        android:text="@string/title_activity_event"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_library"
        android:text="@string/title_activity_library"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_deansOffice"
        android:text="@string/title_activity_deansOffice"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_map"
        android:text="@string/title_activity_map"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_info"
        android:text="@string/title_activity_info"
        android:layout_gravity="center"/>

</LinearLayout>
